--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2225,15 +2225,16 @@ table.views-table {
     text-align: center;
     font-family: Georgia, "Book Antiqua", serif;
 
-    @include breakpoint(295px) {
-      font-size: 1.8em;
+    @include breakpoint(421px) {
+      font-size: 2.5em;
     }
-
-    @include breakpoint(400px) {
-      font-size: 2em;
+    @include breakpoint(731px) {
+      font-size: 3em;
     }
-
-    @include breakpoint(1024px) {
+    @include breakpoint(841px) {
+      font-size: 3.5em;
+    }
+    @include breakpoint(1106px) {
       font-size: 4em;
     }
 
@@ -2258,14 +2259,13 @@ table.views-table {
     }
 
     @include breakpoint(400px) {
-      font-size: 1.5em;
+      font-size: 2.2em;
     }
 
     @include breakpoint(480px) {
       margin: 20px 0;
     }
-
-    @include breakpoint(1024px) {
+    @include breakpoint(840px) {
       font-size: 2.2em;
     }
 
@@ -3979,7 +3979,19 @@ input.form-submit {
           text-decoration: underline;
         }
 
-        @include breakpoint(817px 1104px) {
+        @include breakpoint(680px) {
+          font-size: 0.9em;
+        }
+        @include breakpoint(705px) {
+          font-size: 0.95em;
+        }
+        @include breakpoint(730px) {
+          font-size: 1em;
+        }
+        @include breakpoint(780px) {
+          font-size: 1.1em;
+        }
+        @include breakpoint(840px 1104px) {
           font-size: 1.2em;
         }
         @include breakpoint(1159px) {
