--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2219,7 +2219,7 @@ table.views-table {
   }
 
   .pane-page-site-name {
-    font-size: 1.5em ;
+    font-size: 2em ;
     line-height: 1;
     margin-botom: 10px;
     text-align: center;
@@ -2248,7 +2248,7 @@ table.views-table {
     }
   }
   .pane-page-slogan {
-    font-size: 1em;
+    font-size: 1.3em;
     line-height: 1;
     margin: 10px 0;
     text-align: center;
@@ -2265,7 +2265,17 @@ table.views-table {
     @include breakpoint(480px) {
       margin: 20px 0;
     }
-    @include breakpoint(840px) {
+
+    @include breakpoint(421px) {
+      font-size: 1.6em;
+    }
+    @include breakpoint(731px) {
+      font-size: 1.7em;
+    }
+    @include breakpoint(841px) {
+      font-size: 2em;
+    } 
+    @include breakpoint(1106px) {
       font-size: 2.2em;
     }
 
