Adjust font sizes for main menu

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3997,7 +3997,7 @@ input.form-submit {
         @include breakpoint(1105px) {
           font-size: 1em;
         }
-        @include breakpoint(1141) {
+        @include breakpoint(1141px) {
           font-size: 1.1em;
         }
         @include breakpoint(1232px) {
