--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4296,7 +4296,7 @@ input.form-submit {
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
           font-size: 1em; } }
-      @media (min-width: 1141) {
+      @media (min-width: 1141px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
