--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -4280,7 +4280,7 @@ input.form-submit {
         .pane-superfish-2 #superfish-1 li a,
         .pane-superfish-2 #superfish-2 li a {
           font-size: 1.1em; } }
-      @media (min-width: 840px) and (max-width: 1104px) {
+      @media (min-width: 840px) {
         #block-superfish-1 #superfish-1 li a,
         #block-superfish-1 #superfish-2 li a,
         .pane-superfish-1 #superfish-1 li a,
