--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4227,3 +4227,27 @@ form#user-login, form#user-pass {
     margin-top: 0.7em;
   }
 }
+
+.view-card-cycles {
+  .vscc-controls {
+    text-align: center;
+  }
+  .vscc_controls_pause {
+    display: inline-block;
+  }
+
+  .views-slideshow-controls-top {
+    position: absolute;
+    top: 20px;
+    width: 100%;
+    text-align: center;
+  }
+
+  #views_slideshow_cycle_teaser_section_card_cycles-card_slideshow_1 {
+    width: 100% !important;
+  }
+
+  .views-slideshow-cycle-main-frame-row-item {
+    padding-top: 2em;
+  }
+}
