--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4236,14 +4236,16 @@ form#user-login, form#user-pass {
     display: inline-block;
   }
 
-  .views-slideshow-controls-top {
-    position: absolute;
-    top: 20px;
-    width: 100%;
+  .vscc-controls {
     text-align: center;
+    position: absolute;
+    width: 100%;
+    z-index: 100;
+    height: 2em;
   }
 
-  #views_slideshow_cycle_teaser_section_card_cycles-card_slideshow_1 {
+  .views-slideshow-cycle-main-frame,
+  .views-slideshow-cycle-main-frame-row {
     width: 100% !important;
   }
 
