--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4253,3 +4253,11 @@ form#user-login, form#user-pass {
     padding-top: 2em;
   }
 }
+
+.node-type-panopoly-faq {
+  .field-name-field-categories {
+    margin-top: 1em;
+    font-size: 0.9em;
+    text-align: right;
+  }
+}
