--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4263,6 +4263,7 @@ form#user-login, form#user-pass {
     .field-label,
     .field-items {
       display: inline-block;
+      float: none;
     }
   }
 }
