--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -4267,3 +4267,13 @@ form#user-login, form#user-pass {
     }
   }
 }
+
+.pane-node-title {
+  line-height: 1.2;
+}
+
+#views-display-menu-tabs {
+  input.add-display {
+    color: black;
+  }
+}
