--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -122,7 +122,7 @@ body {
   min-height: 100vh;
 
   a {
-    color: #1F45FC;
+    color: #008080;
     text-decoration: none;
 
     &:hover {
@@ -1025,7 +1025,7 @@ body.maintenance-page {
       color: black;
     
       &:hover {
-        color: #1F45FC;
+        color: #008080;
         text-decoration: none;
       }
     }
@@ -1057,7 +1057,7 @@ body.maintenance-page {
       color: black;
     
       &:hover {
-        color: #1F45FC;
+        color: #008080;
       }
     }
   }
@@ -2273,7 +2273,7 @@ table.views-table {
       color: black;
     
       &:hover {
-        color: #1F45FC;
+        color: #008080;
       }
     }
   }
@@ -3975,7 +3975,7 @@ input.form-submit {
 
         &:hover {
           background: none;
-          color: #1F45FC;
+          color: #008080;
           text-decoration: underline;
         }
 
@@ -4148,7 +4148,7 @@ input.form-submit {
       color: black;
 
       &:hover {
-        color: #1F45FC;
+        color: #008080;
       }
     }
   }
