--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2439,6 +2439,13 @@ table.views-table {
   }
 }
 
+#block-panels-mini-header.sticky-header {
+  position: fixed;
+  background: white;
+  z-index: 100;
+  box-shadow: 0px 4px 8px 0px rgb(189, 189, 189);
+}
+
 .secure-site-notif .block-content {
   background-color: #2ECC71;
   text-align: center;
