--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2443,7 +2443,7 @@ table.views-table {
   position: fixed;
   background: white;
   z-index: 100;
-  box-shadow: 0px 4px 8px 0px rgb(189, 189, 189);
+  box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
 }
 
 .secure-site-notif .block-content {
