--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2349,6 +2349,11 @@ table.views-table {
           position: initial;
         }
       }
+      @include breakpoint(506px) {
+        > div:last-child {
+          display: none;
+        }
+      }
     }
 
     @include breakpoint(1105px) {
