Floating header display

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1674,12 +1674,20 @@ table.views-table .pane-user-field-identification {
     border-bottom: none; }
 
 #block-panels-mini-header.sticky-header {
-  position: fixed;
-  background: white;
-  z-index: 100;
-  -webkit-box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
-          box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
-  left: 0; }
+  display: none; }
+
+#block-panels-mini-floating-header {
+  display: none; }
+  #block-panels-mini-floating-header.sticky-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: fixed;
+    background: white;
+    z-index: 100;
+    -webkit-box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
+            box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
+    left: 0; }
 
 .secure-site-notif .block-content {
   background-color: #2ECC71;
