--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1687,7 +1687,8 @@ table.views-table .pane-user-field-identification {
     z-index: 100;
     -webkit-box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
             box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
-    left: 0; }
+    left: 0;
+    width: 100%; }
 
 .secure-site-notif .block-content {
   background-color: #2ECC71;
