--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2458,6 +2458,7 @@ table.views-table {
     z-index: 100;
     box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
     left: 0;
+    width: 100%;
   }
 }
 
