--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2452,13 +2452,19 @@ table.views-table {
   display: none;
 
   &.sticky-header {
-    display: flex;
+    display: block;
     position: fixed;
     background: white;
     z-index: 100;
     box-shadow: 0px 2px 8px 1px rgba(80, 80, 80, 0.7);
     left: 0;
     width: 100%;
+
+    > .block-content {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
   }
 }
 
